@@ -4,34 +4,29 @@ Explanation is **understanding-oriented**. These documents discuss concepts, des
 
 ## Available Explanations
 
-### DTR 80/20 Design Patterns
+### DTR Architecture and Design
 
 | Document | What it explains |
 |---|---|
-| [80/20 Design Patterns](80-20-design-patterns.md) | Why DTR works the way it does — the philosophy behind the core methods |
+| [Architecture](architecture.md) | Module structure, class hierarchy, SayEvent pipeline, and extension points in DTR 2.6.0 |
+| [How DTR Works](how-doctester-works.md) | The full lifecycle: from test method → SayEvent → MultiRenderMachine → output files |
+| [80/20 Design Patterns](80-20-design-patterns.md) | The Blue Ocean methodology: 14 new capabilities, 0 new dependencies, and why each capability exists |
+
+### Documentation Philosophy
+
+| Document | What it explains |
+|---|---|
+| [Documentation Philosophy](documentation-philosophy.md) | Living documentation, drift-proof accuracy, Blue Ocean innovation, and why HTTP testing was removed |
+| [Drift-Proof Documentation via JVM Introspection](realtime-protocols-philosophy.md) | How reflection-based methods eliminate documentation drift; the provenance problem and its solution |
 
 ### Java 25 Design Philosophy
 
 | Document | What it explains |
 |---|---|
-| [Java 25 Design Philosophy](java25-design-philosophy.md) | How virtual threads, records, sealed classes, and pattern matching work together |
-| [Why Virtual Threads Matter](virtual-threads-philosophy.md) | The design philosophy behind virtual threads and why they change concurrency in Java |
-| [Why Records and Sealed Classes](records-sealed-philosophy.md) | How records eliminate boilerplate and sealed classes enforce type safety |
-
-### Real-Time Protocol Design
-
-| Document | What it explains |
-|---|---|
-| [Real-Time Protocol Philosophy](realtime-protocols-philosophy.md) | When to use WebSockets, gRPC, or SSE; evolution, trade-offs, design goals |
-
-### DTR and Testing Philosophy
-
-| Document | What it explains |
-|---|---|
-| [How DTR Works](how-dtr-works.md) | The request/test/render lifecycle in detail |
-| [Documentation Philosophy](documentation-philosophy.md) | Why test-driven documentation, and the Diataxis connection |
-| [Architecture](architecture.md) | Module structure, class design, and extension points |
+| [Java 25 Design Philosophy](java25-design-philosophy.md) | How records, sealed classes, virtual threads, pattern matching, and `--enable-preview` work together in DTR |
+| [Why Virtual Threads Matter](virtual-threads-philosophy.md) | The design philosophy behind virtual threads; how DTR uses them in MultiRenderMachine and sayBenchmark |
+| [Why Records and Sealed Classes](records-sealed-philosophy.md) | Why SayEvent is sealed (exhaustiveness), why RenderMachine is abstract (extensibility), and how sayRecordComponents works |
 
 ---
 
-If you're trying to accomplish something specific, the [How-to Guides](../how-to/index.md) are more actionable. If you're new, start with the [Tutorials](../tutorials/index.md).
+If you are trying to accomplish something specific, the [How-to Guides](../how-to/index.md) are more actionable. If you are new to DTR, start with the [Tutorials](../tutorials/index.md).
