@@ -1,416 +1,125 @@
-# Explanation: Real-Time Protocol Design Philosophy
+# Explanation: Drift-Proof Documentation via JVM Introspection
 
-Understanding when to use WebSockets, gRPC, or Server-Sent Events requires grasping their design trade-offs and philosophies.
-
----
-
-## The Evolution of Real-Time Communication
-
-### Pre-2010: Polling
-
-```
-Client: GET /data?since=123456
-Server: [new items]
-
-Client: GET /data?since=123457  (repeated every second)
-Server: [new items]
-```
-
-**Problems:**
-- ❌ Wasted bandwidth (repeated requests, mostly empty responses)
-- ❌ High latency (wait up to 1 second for new data)
-- ❌ Server load (many requests for little data)
-- ❌ Battery drain on mobile (constant connections)
+This document explains why DTR 2.6.0 centers on JVM introspection as the mechanism for accurate documentation, and what "drift-proof" means in practice.
 
 ---
 
-### 2010-2015: WebSockets
+## The Provenance Problem
 
-The browser needed a real-time protocol. WebSockets solved polling:
+Every piece of documentation makes an implicit claim: "This was true when it was written." The harder question is whether it is still true now.
 
-```
-Client: GET /ws (HTTP Upgrade)
-Server: 101 Switching Protocols
+Documentation drifts from reality through a simple mechanism: code changes, documentation does not. The developer who changed the code knew what they changed. The documentation was someone else's problem — or, more commonly, today's problem pushed to tomorrow.
 
-→ Full-duplex socket
-Client ←→ Server (persistent connection)
-```
+This is not a discipline problem. It is a structural problem. Documentation has no connection to the code it describes. There is no compile-time check, no test gate, no automated verification that documentation remains accurate after a change.
 
-**Advantages:**
-- ✅ Bidirectional (both send/receive)
-- ✅ Low latency (no request/response overhead)
-- ✅ Efficient (no HTTP headers per message)
-- ✅ Browser-native
-
-**Limitations:**
-- ❌ Works through most proxies, but not all
-- ❌ Higher connection cost (HTTP upgrade)
-- ❌ No automatic reconnection (app must handle)
-
-**Perfect for:** Chat, collaborative editing, games (anything interactive)
+DTR 2.6.0's introspection methods address this structurally, not through discipline.
 
 ---
 
-### 2015-Present: gRPC
+## Introspection as Documentation Source
 
-Google needed efficient RPC for microservices. gRPC uses HTTP/2:
+The JVM contains a complete, authoritative description of every loaded class. It knows:
+- Every field and its type
+- Every method and its signature
+- Every annotation and its attributes
+- Every supertype and interface
+- Whether a class is a record, and if so, its components
 
-```
-Client: HTTP/2 connection
-Server: Multiplexed streams
+This information is always current. When code changes and tests run, the JVM description of that code reflects the change immediately. It cannot be out of date: the JVM is describing the class that was actually compiled and loaded, not the class someone wrote about in a document.
 
-→ Multiple concurrent RPC calls on one connection
-→ Binary protocol (protobuf)
-→ Streaming built-in
-```
+DTR's five introspection methods are queries against this authoritative source:
 
-**Advantages:**
-- ✅ High performance (binary, HTTP/2)
-- ✅ Multiplexing (many calls on one connection)
-- ✅ Streaming for all 4 patterns
-- ✅ Strongly typed (protobuf)
-- ✅ Low latency
+### `sayRecordComponents(Class<?>)`
 
-**Limitations:**
-- ❌ Requires HTTP/2 (some proxies block)
-- ❌ Not browser-native
-- ❌ More setup than REST
+Calls `Class.getRecordComponents()` and documents the result. If a record gains, loses, or renames a component, the documentation changes on the next test run. There is no text to update and no developer who must remember to update it.
 
-**Perfect for:** Microservices, internal APIs, real-time data sync
+Records are the clearest case because they are purely data-carrier types. Their structure is their identity. Documentation of a record's structure is documentation of the record itself, and the JVM always has it right.
 
----
+### `sayClassHierarchy(Class<?>)`
 
-### 2006-Present: Server-Sent Events
+Traverses `getSuperclass()` and `getInterfaces()` recursively and documents the full hierarchy. This is particularly useful for sealed hierarchies, where the set of permitted subtypes is significant. When a new permitted subtype is added, `sayClassHierarchy` documents it automatically.
 
-HTML5 formalized SSE: use HTTP for server→client push:
+### `sayAnnotationProfile(Class<?>)`
 
-```
-Client: GET /events
-Server: 200 OK (Content-Type: text/event-stream)
+Calls `getDeclaredAnnotations()` and documents what annotations a class carries. This matters because annotation presence is architectural: a class annotated with `@Service` is treated differently by the framework than one without. Annotation drift — adding or removing annotations without updating documentation — can be subtle and confusing. `sayAnnotationProfile` makes the annotation state visible in the documentation, regenerated on every test run.
 
-→ Server pushes events over HTTP
-Client receives: event: type\ndata: ...\n\n
-```
+### `sayStringProfile(Class<?>)`
 
-**Advantages:**
-- ✅ HTTP-based (works everywhere)
-- ✅ Simple text format
-- ✅ Auto-reconnection built-in
-- ✅ Browser-native
-- ✅ No special infrastructure
+Reflects on `static final String` fields and documents their values. This is valuable for documenting constants — the actual current values, not values copied from source into documentation that then diverge.
 
-**Limitations:**
-- ❌ One-way only (server → client)
-- ❌ Lower throughput than WebSocket/gRPC
-- ❌ Higher latency than gRPC
+### `sayReflectiveDiff(Object, Object)`
 
-**Perfect for:** Notifications, live updates, dashboards
+Compares two objects field-by-field using reflection and documents the differences. This is how DTR documents schema migrations, configuration changes, and version-to-version structural shifts. The diff is computed from the actual objects, not from a developer's description of what changed.
 
 ---
 
-## Design Decision Matrix
+## The Caching Architecture
 
-**Choose based on:**
+Reflection is not free. The first call to `getRecordComponents()` on a class costs approximately 150µs. If a test suite calls `sayRecordComponents(MyRecord.class)` across 100 test methods, naive implementation would cost 15ms in reflection overhead alone.
 
-### 1. Direction of Communication
+DTR's `reflectiontoolkit` module uses `ConcurrentHashMap<Class<?>, Object>` to cache reflection results. The first call costs the full 150µs. All subsequent calls cost approximately 50ns — a cache lookup in a concurrent hash map.
 
-| Need | Protocol |
-|------|----------|
-| One-way (server → client) | **SSE** (simplest) |
-| Bidirectional | **WebSocket** or **gRPC** |
-
-### 2. Environment
-
-| Environment | Protocol |
-|-------------|----------|
-| Browser/web | **WebSocket** or **SSE** |
-| Microservices | **gRPC** |
-| Mobile app | **gRPC** (efficient) or **WebSocket** |
-
-### 3. Data Type
-
-| Data | Protocol |
-|------|----------|
-| Text/JSON | **WebSocket** or **SSE** |
-| Structured RPC | **gRPC** |
-| Mixed | **WebSocket** |
-
-### 4. Performance Requirements
-
-| Requirement | Protocol |
-|-------------|----------|
-| Low latency (<10ms) | **gRPC** |
-| Medium latency (10-100ms) | **WebSocket** |
-| High latency OK (100ms+) | **SSE** |
-
-### 5. Complexity Tolerance
-
-| Tolerance | Protocol |
-|-----------|----------|
-| Simplest | **SSE** |
-| Moderate | **WebSocket** |
-| High | **gRPC** |
+The cache is per-JVM-process, shared across all tests. It is populated on first access for a class and never invalidated (classes do not change at runtime). The result is that introspection-based documentation has negligible overhead in test suites that document the same classes across multiple test methods.
 
 ---
 
-## Real-World Scenarios
+## The Provenance Guarantee: `sayCallSite()`
 
-### Chat Application
+Introspection methods tell you what the code is. `sayCallSite()` tells you where the documentation was generated.
 
-**Requirements:**
-- Bidirectional (users send and receive)
-- Low latency
-- Works through proxies
+Every call to `sayCallSite()` captures:
+- Source file name
+- Line number
+- Enclosing method name
 
-**Choice: WebSocket** ✅
-- Natural bidirectional fit
-- Simple, proven protocol
-- Browser support built-in
+This information is embedded in the generated documentation, creating a traceable link from any documented fact back to the specific test location that produced it. If you read a documentation claim and want to understand where it came from, the provenance is in the document.
 
----
+`sayCallSite()` uses the Code Reflection API (JEP 516, Project Babylon), a preview feature in Java 25. This API captures source location at near-zero runtime cost — no stack walk, no array allocation, no traversal of the call stack. The location is available to the JVM internally as a property of the compiled method.
 
-### Live Dashboard (Monitoring)
-
-**Requirements:**
-- Server pushes metrics
-- One-way updates
-- HTTP-friendly
-- Simple
-
-**Choice: Server-Sent Events** ✅
-- Perfect for one-way push
-- Auto-reconnection
-- Works everywhere
-- Simplest implementation
+This is why DTR requires `--enable-preview`. The provenance capability would be possible with `Thread.currentThread().getStackTrace()`, but the Code Reflection API makes it fast enough to call on every documentation statement without measurable overhead.
 
 ---
 
-### Microservice RPC
+## Why Reflection-Based Methods Eliminate Drift
 
-**Requirements:**
-- Multiple concurrent calls
-- High throughput
-- Strongly typed
-- Efficient encoding
+Documentation drift requires two things: a change to the code, and a failure to update the documentation. Introspection-based methods break this by eliminating the documentation update step entirely.
 
-**Choice: gRPC** ✅
-- HTTP/2 multiplexing
-- Protobuf efficiency
-- Streaming built-in
-- Designed for this
+Consider what happens with each approach when a record gains a new component:
 
----
+**Manual documentation:**
+1. Developer adds component to record
+2. Developer updates tests (tests check the new component)
+3. Developer does or does not update documentation
+4. If not updated: documentation is wrong indefinitely
 
-### Real-Time Notification Service
+**DTR introspection:**
+1. Developer adds component to record
+2. Developer updates tests (tests check the new component)
+3. `sayRecordComponents` runs again on the next test execution
+4. Documentation reflects the new component automatically
 
-**Requirements:**
-- Push notifications
-- One-way
-- Reliable delivery
-- Works on mobile
-
-**Choice: Server-Sent Events** ✅ or **gRPC**
-- SSE: Simple, browser-friendly
-- gRPC: More efficient on mobile
+Step 3 in the manual case is optional. Step 3 in the DTR case is automatic. This is the structural difference.
 
 ---
 
-## Protocol Philosophy Comparison
+## Limits of Introspection
 
-### WebSocket Philosophy
+Introspection-based documentation is accurate about structure. It is not a substitute for narrative explanation.
 
-> "Browser-friendly, bidirectional communication with minimal overhead"
+`sayClassHierarchy(PaymentProcessor.class)` will show you the full inheritance hierarchy of `PaymentProcessor`. It will not explain why the hierarchy was designed that way, what the trade-offs were, or when you should use a subtype versus the base class. That explanation requires a developer to write it.
 
-- Emerged from needs of browser applications
-- Solves the "real-time web" problem
-- Emphasizes simplicity and universality
-- Works because it upgrades HTTP
+DTR's model is: derive the facts automatically; let developers write the understanding. Facts go stale; understanding — if it describes the reasoning correctly — often remains valid even as the structure evolves.
 
-### gRPC Philosophy
-
-> "Efficient RPC for microservices with modern infrastructure"
-
-- Designed for cloud-native systems
-- Assumes controlled environments
-- Emphasizes performance and features
-- Requires HTTP/2 support
-
-### SSE Philosophy
-
-> "Server push over standard HTTP with zero client complexity"
-
-- Minimal client-side effort
-- Works with any HTTP infrastructure
-- Trade-off: one-way only
-- Browser standard since HTML5
+Use `say(String)` for reasoning and context. Use the introspection methods for structural facts. The combination produces documentation that is both accurate and intelligible.
 
 ---
 
-## Evolution of Thinking
+## The Connection to Living Documentation
 
-**Old model (HTTP Request/Response):**
-```
-All communication is client-initiated
-Server: reactive (waits for requests)
-Client: polling loop
-```
+The concept of "living documentation" — documentation that reflects the current state of the system — has been discussed in software engineering for decades. The challenge has always been execution: how do you make documentation actually update when the code changes?
 
-**Real-time model:**
-```
-Communication can be bidirectional or server-initiated
-Server: can push data anytime
-Client: listens for events
-```
+DTR's answer is to generate documentation that is not stored anywhere in written form. It is regenerated from the running program on each test execution. Documentation cannot drift from the code because documentation is a rendering of the code's self-description, computed fresh each time.
 
----
+This is a different model from documentation-as-text with automated checks. Automated checks still depend on developers writing the text correctly in the first place. DTR's introspection methods skip the text entirely for the categories of information where the JVM has the authoritative answer.
 
-## Technology Stack Implications
-
-### WebSocket Stack
-```
-Browser
-  ↓ (JavaScript WebSocket API)
-WebSocket Client
-  ↓ (TCP connection)
-WebSocket Server (e.g., Jetty, Spring)
-```
-
-**Simplicity:** Medium
-**Effort:** Moderate (handle reconnection, serialization)
-
-### gRPC Stack
-```
-Client (Java, Go, Python, etc.)
-  ↓ (gRPC stub)
-gRPC Client
-  ↓ (HTTP/2)
-gRPC Server (protobuf, codegen)
-```
-
-**Simplicity:** High (code generated, strongly typed)
-**Effort:** Moderate (setup protobuf, understand streaming)
-
-### SSE Stack
-```
-Browser
-  ↓ (EventSource API)
-SSE Client
-  ↓ (HTTP/1.1)
-Web Server (any HTTP server)
-```
-
-**Simplicity:** High (built-in reconnection)
-**Effort:** Low (simple text format)
-
----
-
-## Scalability Implications
-
-### WebSocket
-
-Each connection = one server thread/resource
-- Scalable to thousands (with careful design)
-- Java virtual threads solve this beautifully
-- Connection management overhead
-
-### gRPC
-
-Multiple calls per connection (multiplexing)
-- Scalable to millions (HTTP/2)
-- More efficient resource usage
-- Built-in flow control
-
-### SSE
-
-One request per client
-- Limited by HTTP connection pool
-- Scalable but less efficient than gRPC
-- Simple deployment
-
----
-
-## The Java 25 Advantage
-
-**Virtual Threads + Protocols:**
-
-```java
-// WebSocket: One thread per connection
-try (ExecutorService exec = Executors.newVirtualThreadPerTaskExecutor()) {
-    for (int i = 0; i < 10000; i++) {
-        exec.submit(() -> handleWebSocketConnection());
-    }
-}
-// 10,000 connections on ~12 platform threads ✅
-
-// gRPC: Multiplexed RPC
-// Multiple calls per platform thread ✅✅
-
-// SSE: Standard HTTP
-// Same scalability as gRPC
-```
-
-Virtual threads make all protocols practical at scale.
-
----
-
-## Future Trends
-
-### WebSocket 2.0 (Hypothetical)
-
-- Better proxy support
-- Built-in compression
-- Multiple streams per connection
-
-### HTTP/3 + gRPC
-
-- gRPC on QUIC (lower latency)
-- Better mobile efficiency
-
-### WebTransport
-
-- Blend WebSocket + gRPC
-- QUIC-based, browser support coming
-- Low latency + unreliable delivery
-
----
-
-## Decision Tree
-
-```
-Q1: Do you need bidirectional communication?
-  NO  → Server-Sent Events (SSE)
-  YES → Q2
-
-Q2: Are you building a microservice system?
-  YES → gRPC
-  NO  → Q3
-
-Q3: Is this a browser application?
-  YES → WebSocket
-  NO  → Q4
-
-Q4: Do you control both client and server?
-  YES → gRPC (if low latency needed) or WebSocket
-  NO  → WebSocket
-```
-
----
-
-## Summary
-
-| Protocol | Best For | Reason |
-|----------|----------|--------|
-| **SSE** | Notifications, dashboards | Simple, reliable one-way push |
-| **WebSocket** | Chat, games, collaboration | Bidirectional, browser-native |
-| **gRPC** | Microservices, internal APIs | Efficient, multiplexed, strongly typed |
-
-Choose the simplest that meets your requirements. Virtual threads make scaling practical for all of them.
-
----
-
-## See Also
-
-- [Tutorial: WebSockets](../tutorials/websockets-realtime.md)
-- [Tutorial: gRPC Streaming](../tutorials/grpc-streaming.md)
-- [Tutorial: Server-Sent Events](../tutorials/server-sent-events.md)
-- [Reference: Real-Time Protocols](../reference/realtime-protocols-reference.md)
+For the categories where the JVM does not have the answer — the reasoning, the trade-offs, the analogies — human-written narrative remains irreplaceable. The combination of machine-derived facts and human-written explanation is more accurate than either alone.
