@@ -1,330 +1,242 @@
-# DTR 80/20 Quick Reference
+# DTR 2.6.0 — 80/20 Quick Reference
 
-**One-page cheat sheet** for the most common DTR patterns. Print this or bookmark it.
-
----
-
-## Core Methods
-
-| Method | Purpose | Example |
-|--------|---------|---------|
-| `sayNextSection(String)` | Create H1 heading + TOC entry | `sayNextSection("User API")` |
-| `say(String)` | Add explanatory paragraph | `say("This creates a new user.")` |
-| `sayAndMakeRequest(Request)` | Execute HTTP + document | `Response r = sayAndMakeRequest(Request.GET()...)` |
-| `makeRequest(Request)` | Execute HTTP silently | `makeRequest(Request.POST()...)` |
-| `sayAndAssertThat(String, T, Matcher)` | Assert + document result | `sayAndAssertThat("Status is 200", status, equalTo(200))` |
+**One-page cheat sheet for DTR 2.6.0.** Bookmark this or print it.
 
 ---
 
-## HTTP Request Building
-
-### GET
-```java
-Request.GET()
-    .url(testServerUrl().path("/api/users"))
-```
-
-### POST with JSON
-```java
-Request.POST()
-    .url(testServerUrl().path("/api/users"))
-    .contentTypeApplicationJson()
-    .payload(userDto)
-```
-
-### POST with Form Data
-```java
-Request.POST()
-    .url(testServerUrl().path("/api/login"))
-    .addFormParameter("email", "user@example.com")
-    .addFormParameter("password", "secret")
-```
-
-### PUT / PATCH / DELETE
-```java
-Request.PUT().url(...).payload(...)
-Request.PATCH().url(...).contentTypeApplicationJson().payload(...)
-Request.DELETE().url(...)
-```
-
-### With Headers
-```java
-Request.GET()
-    .url(...)
-    .addHeader("Authorization", "Bearer TOKEN")
-    .addHeader("Accept", "application/json")
-```
-
-### With Query Parameters
-```java
-Request.GET()
-    .url(testServerUrl().path("/api/users")
-        .addQueryParameter("page", "1")
-        .addQueryParameter("sort", "name"))
-```
-
-### File Upload
-```java
-Request.POST()
-    .url(testServerUrl().path("/api/upload"))
-    .addFileToUpload("file", new File("document.pdf"))
-```
-
----
-
-## Response Parsing
-
-| Method | Returns | Use when |
-|--------|---------|----------|
-| `.httpStatus()` | `int` | Need HTTP status code |
-| `.payloadAsString()` | `String` | Need raw text |
-| `.payloadAsPrettyString()` | `String` | Need pretty-printed JSON/XML |
-| `.payloadAs(Class)` | `T` | Deserialize single object (auto-detect JSON/XML) |
-| `.payloadJsonAs(Class)` | `T` | Deserialize as JSON |
-| `.payloadJsonAs(TypeReference)` | `T` | Deserialize generic types (List, Map, etc.) |
-| `.payloadXmlAs(Class)` | `T` | Deserialize as XML |
-| `.headers()` | `Map<String,String>` | Need response headers |
-
-### Examples
-```java
-// Single object
-UserDto user = response.payloadAs(UserDto.class);
-
-// List
-List<UserDto> users = response.payloadJsonAs(
-    new TypeReference<List<UserDto>>() {});
-
-// Map
-Map<String, Object> data = response.payloadJsonAs(
-    new TypeReference<Map<String, Object>>() {});
-
-// Raw text
-String rawResponse = response.payloadAsString();
-
-// Status
-int status = response.httpStatus();
-```
-
----
-
-## URL Building
+## Test class boilerplate
 
 ```java
-Url.host("http://localhost:8080")
-    .path("/api/users")
-    .addQueryParameter("page", "1")
-    .uri()  // Convert to java.net.URI
-```
+import io.github.seanchatmangpt.dtr.core.DtrContext;
+import io.github.seanchatmangpt.dtr.core.DtrExtension;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 
-Or use `testServerUrl()` (override in your test class):
-```java
-@Override
-public Url testServerUrl() {
-    return Url.host("http://localhost:8080");
-}
-
-// Then in tests:
-testServerUrl().path("/api/users")
-testServerUrl().path("/api/article/" + articleId)
-```
-
----
-
-## Content-Type Shortcuts
-
-| Method | Header Value |
-|--------|--------------|
-| `.contentTypeApplicationJson()` | `application/json` |
-| `.contentTypeApplicationXml()` | `application/xml` |
-| `.contentTypeTextPlain()` | `text/plain` |
-| `.contentTypeTextHtml()` | `text/html` |
-
----
-
-## Assertion Matchers
-
-Use with `sayAndAssertThat(String, T, Matcher<T>)` for readable documentation.
-
-### Equality
-```java
-import static org.hamcrest.CoreMatchers.*;
-
-sayAndAssertThat("Status is 200", 200, equalTo(response.httpStatus()));
-sayAndAssertThat("Strings match", "hello", equalToIgnoringCase("HELLO"));
-```
-
-### Comparison
-```java
-sayAndAssertThat("Count > 0", count, greaterThan(0));
-sayAndAssertThat("Value >= 100", value, greaterThanOrEqualTo(100));
-sayAndAssertThat("In range", num, allOf(greaterThan(0), lessThan(100)));
-```
-
-### Null/Presence
-```java
-sayAndAssertThat("ID exists", created.id, notNullValue());
-sayAndAssertThat("Error is null", error, nullValue());
-sayAndAssertThat("List has items", users, not(empty()));
-```
-
-### String Matching
-```java
-sayAndAssertThat("Contains domain", email, containsString("@"));
-sayAndAssertThat("Starts with", path, startsWith("/api"));
-sayAndAssertThat("Matches regex", version, matchesRegex("\\d+\\.\\d+"));
-```
-
-### Collection Matching
-```java
-sayAndAssertThat("List size", users, hasSize(3));
-sayAndAssertThat("Has item", users, hasItem(alice));
-sayAndAssertThat("Any match", numbers, hasItem(greaterThan(10)));
-```
-
-### Type Checking
-```java
-sayAndAssertThat("Is a String", obj, instanceOf(String.class));
-```
-
----
-
-## Session Cookies (Authentication)
-
-Cookies **auto-persist** across requests in the same test method:
-
-```java
-@Test
-public void testWithCookies() {
-    // Login silently (no documentation)
-    makeRequest(
-        Request.POST()
-            .url(testServerUrl().path("/api/login"))
-            .addFormParameter("email", "user@example.com")
-            .addFormParameter("password", "secret"));
-
-    // All subsequent requests include session cookie automatically
-    Response authenticated = sayAndMakeRequest(
-        Request.POST()
-            .url(testServerUrl().path("/api/articles"))
-            .contentTypeApplicationJson()
-            .payload(article));
-
-    // Cookies reset between test methods
-}
-```
-
----
-
-## Common HTTP Status Codes
-
-| Code | Meaning | Use case |
-|------|---------|----------|
-| 200 | OK | Successful GET, PUT, PATCH |
-| 201 | Created | Successful POST creating a resource |
-| 204 | No Content | Successful DELETE |
-| 400 | Bad Request | Invalid request data |
-| 401 | Unauthorized | Missing/invalid auth |
-| 403 | Forbidden | Authenticated but no permission |
-| 404 | Not Found | Resource doesn't exist |
-| 500 | Server Error | Server-side error |
-
----
-
-## Test Class Template
-
-```java
-import io.github.seanchatmangpt.dtr.dtr.DTR;
-import io.github.seanchatmangpt.dtr.dtr.testbrowser.Request;
-import io.github.seanchatmangpt.dtr.dtr.testbrowser.Response;
-import io.github.seanchatmangpt.dtr.dtr.testbrowser.Url;
-import org.junit.Test;
-import static org.hamcrest.CoreMatchers.*;
-
-public class MyApiDocTest extends DTR {
-
-    @Override
-    public Url testServerUrl() {
-        return Url.host("http://localhost:8080");
-    }
-
+@ExtendWith(DtrExtension.class)
+class MyDocTest {
     @Test
-    public void testSomething() {
-        sayNextSection("Section Title");
-        say("Explain what this test does.");
-
-        Response response = sayAndMakeRequest(
-            Request.GET()
-                .url(testServerUrl().path("/api/endpoint")));
-
-        sayAndAssertThat("Status is 200", 200, equalTo(response.httpStatus()));
+    void myTest(DtrContext ctx) {
+        ctx.sayNextSection("Section Title");
+        ctx.say("Explain what this documents.");
     }
 }
 ```
 
+**Output:** `target/docs/test-results/MyDocTest.md` (+ `.html`, `.tex`, `.json`)
+
 ---
 
-## Run Tests
+## All 37 say* methods
+
+### Core (16)
+
+| Method | Output |
+|--------|--------|
+| `ctx.say(String)` | Paragraph |
+| `ctx.sayNextSection(String)` | H1 heading + TOC |
+| `ctx.sayRaw(String)` | Verbatim text |
+| `ctx.sayCode(String, lang)` | Fenced code block |
+| `ctx.sayJson(Object)` | Pretty-printed JSON |
+| `ctx.sayTable(String[][])` | Markdown table |
+| `ctx.sayWarning(String)` | Warning callout |
+| `ctx.sayNote(String)` | Note callout |
+| `ctx.sayKeyValue(Map)` | 2-column table |
+| `ctx.sayUnorderedList(List)` | Bulleted list |
+| `ctx.sayOrderedList(List)` | Numbered list |
+| `ctx.sayAssertions(Map<String,Boolean>)` | Pass/fail checklist |
+| `ctx.sayRef(DocTestRef)` | Cross-reference |
+| `ctx.sayCite(String)` | Citation |
+| `ctx.sayCite(String, String)` | Citation with URL |
+| `ctx.sayFootnote(String)` | Footnote |
+
+### JVM Introspection (5) — since v2.4.0
+
+| Method | Output |
+|--------|--------|
+| `ctx.sayCallSite()` | Call site location |
+| `ctx.sayAnnotationProfile(Class<?>)` | Annotation table |
+| `ctx.sayClassHierarchy(Class<?>)` | Class tree |
+| `ctx.sayStringProfile(String)` | String metrics |
+| `ctx.sayReflectiveDiff(Object, Object)` | Field diff table |
+
+### Code Reflection (5) — since v2.3.0
+
+| Method | Output |
+|--------|--------|
+| `ctx.sayCodeModel(Class<?>)` | JVM code model |
+| `ctx.sayCodeModel(Method)` | JVM code model |
+| `ctx.sayControlFlowGraph(Method)` | Mermaid CFG |
+| `ctx.sayCallGraph(Class<?>)` | Mermaid call graph |
+| `ctx.sayOpProfile(Method)` | Opcode profile |
+
+### Benchmarking (2) — NEW in v2.6.0
+
+| Method | Output |
+|--------|--------|
+| `ctx.sayBenchmark(String, Runnable)` | Benchmark result table (100 warmup, 1K iter) |
+| `ctx.sayBenchmark(String, Runnable, int, int)` | Benchmark result table (explicit counts) |
+
+### Mermaid (2) — NEW in v2.6.0
+
+| Method | Output |
+|--------|--------|
+| `ctx.sayMermaid(String)` | Any Mermaid diagram |
+| `ctx.sayClassDiagram(Class<?>...)` | Generated class diagram |
+
+### Coverage and Quality (3) — NEW in v2.6.0
+
+| Method | Output |
+|--------|--------|
+| `ctx.sayDocCoverage(Class<?>...)` | Documentation coverage report |
+| `ctx.sayContractVerification(Class<?>, Class<?>...)` | Interface compliance table |
+| `ctx.sayEvolutionTimeline(Class<?>, int)` | API change timeline |
+
+### Utility (4) — NEW in v2.6.0
+
+| Method | Output |
+|--------|--------|
+| `ctx.sayEnvProfile()` | Java/OS/memory table |
+| `ctx.sayRecordComponents(Class<? extends Record>)` | Record component table |
+| `ctx.sayException(Throwable)` | Exception detail block |
+| `ctx.sayAsciiChart(String, double[], String[])` | ASCII bar chart |
+
+---
+
+## RenderMachine quick reference
+
+```java
+// Default (Markdown + HTML + LaTeX + JSON)
+ctx.getRenderMachine();  // RenderMachineImpl
+
+// Replace with multi-format output
+ctx.setRenderMachine(new MultiRenderMachine(
+    new RenderMachineImpl(),
+    new RenderMachineLatex(new IEEETemplate(), new PdflatexStrategy()),
+    new BlogRenderMachine(new DevToTemplate()),
+    new SlideRenderMachine()
+));
+```
+
+**RenderMachine implementations:**
+
+| Class | Output |
+|-------|--------|
+| `RenderMachineImpl` | Markdown + HTML + LaTeX + JSON |
+| `RenderMachineLatex` | LaTeX / PDF |
+| `BlogRenderMachine` | Social blog post |
+| `SlideRenderMachine` | Reveal.js slides |
+| `MultiRenderMachine` | All above via virtual threads |
+
+**LaTeX templates:** `ArXivTemplate`, `NatureTemplate`, `IEEETemplate`, `ACMTemplate`, `UsPatentTemplate`
+
+**Blog templates:** `DevToTemplate`, `MediumTemplate`, `SubstackTemplate`, `HashnodeTemplate`, `LinkedInTemplate`
+
+**LaTeX compilers:** `PdflatexStrategy`, `XelatexStrategy`, `LatexmkStrategy`, `PandocStrategy`
+
+---
+
+## Common patterns
+
+### Basic documentation
+
+```java
+ctx.sayNextSection("User API");
+ctx.say("Returns all registered users.");
+ctx.sayCode("List<User> users = userService.findAll();", "java");
+ctx.sayTable(new String[][] {
+    {"Field", "Type", "Description"},
+    {"id",    "long",   "Unique identifier"},
+    {"name",  "String", "Display name"},
+});
+```
+
+### Benchmark with environment
+
+```java
+ctx.sayNextSection("Performance");
+ctx.sayEnvProfile();  // always first
+ctx.sayBenchmark("ArrayList 1K add", () -> {
+    var list = new java.util.ArrayList<String>();
+    for (int i = 0; i < 1_000; i++) list.add("item" + i);
+}, 100, 5_000);
+ctx.sayAsciiChart("Results (ns)", new double[]{12.3, 45.6}, new String[]{"avg", "p99"});
+```
+
+### Mermaid diagram
+
+```java
+ctx.sayMermaid("""
+    sequenceDiagram
+        Client->>DtrContext: say*()
+        DtrContext->>RenderMachine: say*()
+        RenderMachine-->>Client: void
+    """);
+```
+
+### Record introspection
+
+```java
+record ApiResponse(int status, String body) {}
+ctx.sayRecordComponents(ApiResponse.class);
+ctx.sayReflectiveDiff(
+    new ApiResponse(200, "OK"),
+    new ApiResponse(404, "Not Found")
+);
+```
+
+### Exception documentation
+
+```java
+try {
+    riskyOp();
+} catch (Exception e) {
+    ctx.sayException(e);
+}
+```
+
+### Coverage audit
+
+```java
+ctx.sayDocCoverage(UserService.class);
+ctx.sayContractVerification(UserServiceImpl.class, UserService.class);
+ctx.sayEvolutionTimeline(DtrContext.class, 5);
+```
+
+---
+
+## Run tests
 
 ```bash
-# Build and run tests
-mvnd clean test
+# Run a specific DocTest
+mvnd test -pl dtr-integration-test -Dtest=MyDocTest
 
-# Run only one test class
-mvnd test -Dtest=MyApiDocTest
+# Run all tests
+mvnd test
 
-# View output (generated HTML docs)
-open target/site/dtr/index.html
+# View output
+ls target/docs/test-results/
+cat target/docs/test-results/MyDocTest.md
 ```
 
 ---
 
-## Common Patterns
+## REMOVED in 2.6.0
 
-### Silent Setup (No Documentation)
-```java
-// Login without documenting it
-makeRequest(
-    Request.POST()
-        .url(testServerUrl().path("/api/login"))
-        .addFormParameter("email", "test@example.com")
-        .addFormParameter("password", "secret"));
-```
+The following classes were removed. Do not use them.
 
-### Parse and Validate
-```java
-Response response = sayAndMakeRequest(
-    Request.GET()
-        .url(testServerUrl().path("/api/users")));
-
-List<UserDto> users = response.payloadJsonAs(
-    new TypeReference<List<UserDto>>() {});
-
-sayAndAssertThat("Got 3 users", users.size(), equalTo(3));
-```
-
-### Handle Errors
-```java
-Response forbidden = sayAndMakeRequest(
-    Request.POST()
-        .url(testServerUrl().path("/api/protected")));
-
-sayAndAssertThat("Returns 403", forbidden.httpStatus(), equalTo(403));
-```
-
-### Verify Created Object
-```java
-UserDto newUser = new UserDto("alice", "alice@example.com");
-Response response = sayAndMakeRequest(
-    Request.POST()
-        .url(testServerUrl().path("/api/users"))
-        .contentTypeApplicationJson()
-        .payload(newUser));
-
-UserDto created = response.payloadAs(UserDto.class);
-sayAndAssertThat("ID assigned", created.id, notNullValue());
-sayAndAssertThat("Email matches", created.email, equalTo("alice@example.com"));
-```
+| Removed | Replacement |
+|---------|-------------|
+| `TestBrowser` / `TestBrowserImpl` | No replacement — HTTP testing is out of scope |
+| `Request.GET()` / `.POST()` etc. | No replacement |
+| `Response.httpStatus()` / `.payloadAs()` | No replacement |
+| `Url` builder | No replacement |
+| `sayAndMakeRequest(Request)` | No replacement |
+| `sayAndAssertThat(String, T, Matcher)` | Use JUnit assertions + `ctx.sayAssertions(Map)` |
+| `WebSocketClient`, `WebSocketSession` | No replacement |
+| `ServerSentEventsClient` | No replacement |
+| `BearerTokenAuth`, `ApiKeyAuth`, `BasicAuth` | No replacement |
+| `HttpConstants` | No replacement |
 
 ---
 
-**Print this page or bookmark it as your daily reference!**
+**DTR 2.6.0** — `io.github.seanchatmangpt.dtr:dtr-core:2.6.0` — Java 25+ — `--enable-preview`
